# gitlint

./: .coveragerc  .flake8  .gitignore  .gitlint  .pre-commit-hooks.yaml  .pylintrc  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  Vagrantfile  colors.py  doc-requirements.txt  extra.css  extra.js  hatch_build.py  index.html  indirect.sh  latest  mkdocs.yml  params.json  pyproject.toml  requirements.txt  run_tests.sh  search.html  setup.py  sitemap.xml  test-requirements.txt  versions.json
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  issue-template.md
.github/workflows/: checks.yml  ci.yml  github-release.yml  publish-docker.yml  publish-docs.yml  publish-release.yml  test-docker.yml  test-release.yml
0.19.x/: 404.html  index.html
0.19.x/configuration/: index.html
0.19.x/contributing/: index.html
0.19.x/getting_started/: index.html
0.19.x/ignoring_commits/: index.html
0.19.x/linting_specific_commits/: index.html
0.19.x/overrides/: 404.html
0.19.x/rules/: index.html
alternatives/: index.html
ci/: index.html
commit_hooks/: index.html
configuration/: index.html
configuration/cli/: index.html
configuration/commit_config/: index.html
configuration/general_options/: index.html
configuration/gitlint_file/: index.html
contrib_rules/: index.html
contributing/: index.html
contributing/contrib_rules/: index.html
contributing/environment_setup/: index.html
contributing/packaging/: index.html
contributing/releases/: index.html
contributing/tests_formatting_docs/: index.html
demos/: asciicinema.json  scenario.txt
dev/: 404.html  index.html  sitemap.xml
dev/alternatives/: index.html
dev/ci/: index.html
dev/commit_hooks/: index.html
dev/configuration/: index.html
dev/contributing/: index.html
dev/exit_codes/: index.html
dev/getting_started/: index.html
dev/ignoring_commits/: index.html
dev/installation/: index.html
dev/javascript/: extra.js
dev/linting_specific_commits/: index.html
dev/rules/: index.html
dev/stylesheets/: extra.css
docs/: ci.md  commit_hooks.md  configuration.md  contrib_rules.md  contributing.md  extra.css  extra.js  getting_started.md  ignoring_commits.md  index.md  installation.md  linting_specific_commits.md  rules.md  user_defined_rules.md
docs/configuration/: cli.md  (+5 more)
examples/: commit-message-1  commit-message-10  commit-message-11  commit-message-2  commit-message-3  commit-message-4  commit-message-5  commit-message-6  commit-message-7  commit-message-8  commit-message-9  gitlint  my_commit_rules.py  my_configuration_rules.py  my_line_rules.py
exit_codes/: index.html
getting_started/: index.html
gitlint/: __init__.py  cache.py  cli.py  config.py  display.py  exception.py  git.py  hooks.py  lint.py  options.py  rule_finder.py  rules.py  sh.py  shell.py  user_rules.py  utils.py
gitlint-core/: LICENSE  MANIFEST.in  README.md  package_long_description.md  pyproject.toml  setup.py
gitlint-core/gitlint/: __init__.py  cache.py  cli.py  config.py  deprecation.py  display.py  exception.py  git.py  hooks.py  lint.py  options.py  rule_finder.py  rules.py  shell.py  utils.py
gitlint-core/gitlint/contrib/rules/: authors_commit.py  block-fixup-squash.py  block-github-author.py  conventional_commit.py  disallow-cleanup-commits.py  disallow-fixup-squash-commit.py  disallow_cleanup_commits.py  signedoff_by.py
gitlint-core/gitlint/files/: commit-msg  gitlint
gitlint-core/gitlint/tests/: base.py  test_cache.py  test_deprecation.py  test_display.py  test_hooks.py  test_lint.py  test_options.py  test_utils.py
gitlint-core/gitlint/tests/cli/: test_cli.py  test_cli_hooks.py
gitlint-core/gitlint/tests/config/: test_config.py  test_config_builder.py  test_config_precedence.py  test_rule_collection.py
gitlint-core/gitlint/tests/contrib/: test_contrib_rules.py
gitlint-core/gitlint/tests/contrib/rules/: test_authors_commit.py  test_conventional_commit.py  test_disallow_cleanup_commits.py  test_disallow_fixup_squash_commit.py  test_signedoff_by.py
gitlint-core/gitlint/tests/expected/cli/test_cli/: test_contrib_1  test_debug_1  test_input_stream_debug_2  test_lint_commit_1  test_lint_multiple_commits_csv_1  test_lint_staged_msg_filename_2  test_lint_staged_stdin_1  test_lint_staged_stdin_2  test_named_rules_2
gitlint-core/gitlint/tests/expected/cli/test_cli_hooks/: test_hook_config_1_stdout  test_hook_edit_1_stdout  test_hook_no_1_stdout  test_hook_yes_1_stdout  test_run_hook_negative_1
gitlint-core/gitlint/tests/git/: test_git.py  test_git_commit.py  test_git_context.py
gitlint-core/gitlint/tests/rules/: test_body_rules.py  test_configuration_rules.py  test_meta_rules.py  test_rules.py  test_title_rules.py  test_user_rules.py
gitlint-core/gitlint/tests/samples/commit_message/: fixup  fixup_amend  merge  sample2  sample5
gitlint-core/gitlint/tests/samples/config/: AUTHORS  invalid-option-value  named-rules  no-sections  nonexisting-option  nonexisting-rule
gitlint-core/gitlint/tests/samples/user_rules/: my_commit_rules.foo  my_commit_rules.py
gitlint-core/gitlint/tests/samples/user_rules/import_exception/: invalid_python.py
gitlint-core/gitlint/tests/samples/user_rules/incorrect_linerule/: my_line_rule.py
gitlint-core/gitlint/tests/samples/user_rules/parent_package/: __init__.py  my_commit_rules.py
ignoring_commits/: index.html
images/: RuleViolations.graffle
installation/: index.html
javascript/: extra.js
latest/: sitemap.xml
linting_specific_commits/: index.html
mkdocs/: search_index.json
qa/: base.py  integration_test.py  requirements.txt  shell.py  test_commits.py  test_config.py  test_contrib.py  test_gitlint.py  test_hooks.py  test_issue298.py  test_named_rules.py  test_rules.py  test_stdin.py  test_user_defined.py  utils.py
rules/: index.html
search/: search_index.json
tools/: changelog.py  create-test-repo.sh  stats.sh  win-create-test-repo.bat
user_defined_rules/: index.html
(+245 files in other folders)
