[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]

# TODO: long description, wasn't automatically imported from setup.py
# long_description = """
# Great for use as a commit-msg git hook or as part of your gating script in a CI pipeline (e.g. jenkins, github actions).
# Many of the gitlint validations are based on `well-known`_ community_ `standards`_, others are based on checks that
# we've found useful throughout the years. Gitlint has sane defaults, but you can also easily customize it to your
# own liking.

# Demo and full documentation on `jorisroovers.github.io/gitlint`_.
# To see what's new in the latest release, visit the CHANGELOG_.

# Source code on `github.com/jorisroovers/gitlint`_.

# .. _well-known: http://tbaggery.com/2008/04/19/a-note-about-git-commit-messages.html
# .. _community: http://addamhardy.com/blog/2013/06/05/good-commit-messages-and-enforcing-them-with-git-hooks/
# .. _standards: http://chris.beams.io/posts/git-commit/
# .. _jorisroovers.github.io/gitlint: https://jorisroovers.github.io/gitlint
# .. _CHANGELOG: https://github.com/jorisroovers/gitlint/blob/main/CHANGELOG.md
# .. _github.com/jorisroovers/gitlint: https://github.com/jorisroovers/gitlint
# """

# TODO: check whether files are included?
# package_data={"gitlint": ["files/*"]},


name = "gitlint-core"
dynamic = ["version"]
description = "Git commit message linter written in python, checks your commit messages for style."
readme = "package_long_description.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Joris Roovers" },
]
keywords = [
    "git",
    "gitlint",
    "lint",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "arrow>=1",
    "Click>=8",
    "sh>=1.13.0 ; sys_platform != \"win32\"",
]

[project.optional-dependencies]
trusted-deps = [
    "arrow==1.2.3",
    "Click==8.1.3",
    "sh==1.14.3 ; sys_platform != \"win32\"",
]

[project.scripts]
gitlint = "gitlint.cli:cli"

[project.urls]
Documentation = "https://jorisroovers.github.io/gitlint"
Homepage = "https://jorisroovers.github.io/gitlint"
Source = "https://github.com/jorisroovers/gitlint"

[tool.hatch.version]
path = "gitlint/__init__.py"

[tool.hatch.build]
include = [
    "/gitlint",
]
exclude = [
    "/gitlint/tests",
]
