[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlint-core"
dynamic = ["version"]
description = "Git commit message linter written in python, checks your commit messages for style."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Joris Roovers" },
]
keywords = [
    "git",
    "gitlint",
    "lint",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "arrow>=1",
    "Click>=8",
    "sh>=1.13.0 ; sys_platform != \"win32\"",
]

[project.optional-dependencies]
trusted-deps = [
    "arrow==1.2.3",
    "Click==8.1.3",
    "sh==1.14.3 ; sys_platform != \"win32\"",
]

[project.scripts]
gitlint = "gitlint.cli:cli"

[project.urls]
Documentation = "https://jorisroovers.github.io/gitlint"
Homepage = "https://jorisroovers.github.io/gitlint"
Source = "https://github.com/jorisroovers/gitlint"

[tool.hatch.version]
path = "gitlint/__init__.py"

[tool.hatch.build]
include = [
    "/gitlint",
]
exclude = [
    "/gitlint/tests",
]
